# omgspice

./: .gdb_history  DEVICES  README  autogen.sh  configure.ac
src/: Makefile.am  ngspice.c
src/include/ngspice/: cktdefs.h  gendefs.h  ifsim.h
src/include/omi/: Makefile.am  omiDef.h  omiIft.h
src/spicelib/analysis/: cktdest.c  cktsetup.c
src/spicelib/devices/: Makefile.am  dev.c
src/spicelib/devices/adms/: adms-info.txt
src/spicelib/devices/adms/admst/: ngspiceVersion.xml
src/spicelib/devices/omibsim4/: Makefile.am  omib4.c  omib4acld.c  omib4ask.c  omib4check.c  omib4cvtest.c  omib4del.c  omib4geo.c  omib4getic.c  omib4getmparam.c  omib4getparam.c  omib4ld.c  omib4mask.c  omib4mdel.c  omib4mpar.c  omib4noi.c  omib4par.c  omib4pzld.c  omib4set.c  omib4soachk.c  omib4temp.c  omib4trunc.c  omibsim4def.h  omibsim4ext.h  omibsim4init.c  omibsim4init.h  omibsim4itf.h
src/spicelib/parser/: inp2m.c  inpdomod.c  inpgmod.c
